kubernetes/apps/kube-system/headlamp/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  annotations:
    external-dns.kubernetes.io/target: "${INTERNAL_DOMAIN}"
spec:
  parentRefs:
    - name: internal
      namespace: network
      kind: Gateway
  hostnames:
    - "${APP}.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: local-user
